[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]          # search in current directory
include = ["misc*"]    # include only packages starting with 'misc'
exclude = ["test_*"]   # exclude test folders

[project]
name = "util"
version = "0.1.0"
description = "Some reusable utilities"
license = "MIT"
authors = [{name = "Dasun Tharaka", email = "sendtodasun@gmail.com"}]