[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "util"
version = "0.1.0"
description = "Some reusable utilities"
requires-python = ">=3.8"
dependencies = [
    # Add your dependencies here, e.g., "requests", "click"
]
license = "MIT"

[project.scripts]
util = "misc" # Allows running via command line
